[package]
name = "fastport-core"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["HDAIS Project"]
description = "High-performance AVX-512 async port scanner core"
license = "MIT"

[lib]
name = "fastport_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime - tokio with all features
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Networking
socket2 = { version = "0.5", features = ["all"] }
trust-dns-resolver = "0.23"

# Performance and SIMD
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# Core utilities
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
memchr = "2.7"
num_cpus = "1.16"
rand = "0.8"

# CPU feature detection (compile-time)
cfg-if = "1.0"
raw-cpuid = "11.0"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winbase"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[features]
default = ["avx2", "vnni"]
avx512 = []
avx2 = []
vnni = []      # AVX-VNNI / AVX-VNNI-INT8 for pattern matching
amx = []       # AMX for matrix ops (engineering samples)
neon = []      # For ARM support

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# ============================================================================
# METEOR LAKE / LATITUDE 5450 COVERT EDITION BUILD INSTRUCTIONS
# ============================================================================
# 
# Standard build (AVX2 + VNNI):
#   RUSTFLAGS='-C target-cpu=meteorlake -C target-feature=+avx2,+fma,+avxvnni,+avxvnniint8,+avxifma,+aes,+vaes,+pclmul,+sha,+gfni' \
#     cargo build --release
#
# Engineering Sample A00 (with AMX):
#   RUSTFLAGS='-C target-cpu=meteorlake -C target-feature=+avx2,+fma,+avxvnni,+avxvnniint8,+avxifma,+avxneconvert,+aes,+vaes,+pclmul,+sha,+gfni,+cmpccxadd,+amx-tile,+amx-int8,+amx-bf16' \
#     cargo build --release --features amx
#
# Expected performance gains on Meteor Lake:
#   - VNNI INT8 pattern matching: ~2-4x faster banner detection
#   - AVX-IFMA: ~1.5x faster checksum calculations
#   - Prefetch optimization: ~10-20% overall throughput
#   - Proper P-core pinning: ~5-10% latency reduction
# ============================================================================
